[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/PlayerOriginal.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.784314, 0, 0.752941, 1 )

[sub_resource type="PrismMesh" id=3]
size = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CapsuleShape" id=5]

[sub_resource type="BoxShape" id=6]
extents = Vector3( 1, 0.255705, 1 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="PlayerMainMesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.49636, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="PointerFront" type="MeshInstance" parent="PlayerMainMesh"]
transform = Transform( -1, 8.74228e-08, 3.82137e-15, -8.74228e-08, -1, -8.74228e-08, -3.82137e-15, -8.74228e-08, 1, 0, -0.983429, 0.801357 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.49636, 0 )
shape = SubResource( 5 )

[node name="Feet" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.252195, 0 )
shape = SubResource( 6 )

[node name="GroundRay" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -200, 0 )

[node name="PlayerCamera" type="Camera" parent="."]
transform = Transform( -1, 1.77636e-15, -8.74228e-08, -2.26267e-08, 0.965926, 0.258819, 8.44439e-08, 0.258819, -0.965926, 0, 15.6563, -19.0028 )
far = 500.0

[node name="P_Jump_Timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="P_Jump_Timer" to="." method="_on_P_Jump_Timer_timeout"]
